creusot/tests/should_fail/structural_resolve.stderr
error[E0046]: not all trait items implemented, missing: `resolve_coherence`
 --> structural_resolve.rs:7:1
  |
7 | impl Resolve for False {
  | ^^^^^^^^^^^^^^^^^^^^^^ missing `resolve_coherence` in implementation
  |
  = help: implement the missing item: `fn resolve_coherence<Self>(self) { todo!() }`

error[E0046]: not all trait items implemented, missing: `resolve_coherence`
  --> structural_resolve.rs:18:1
   |
18 | impl<T> Resolve for P<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^ missing `resolve_coherence` in implementation
   |
   = help: implement the missing item: `fn resolve_coherence<Self>(self) { todo!() }`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0046`.
